RG-code/gen/RGCodeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Rasmus/source/repos/RG-code/RG-code\RGCode.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class RGCodeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, BoolOperator=21, Typeword=22, BooleanValue=23, 
		ScopeStart=24, ScopeEnd=25, Mul_Div=26, Plus_Minus=27, WS=28, Number=29, 
		ID=30, COMMENT=31;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_vardec = 2, RULE_assignment = 3, 
		RULE_expr = 4, RULE_math = 5, RULE_term = 6, RULE_factor = 7, RULE_atom = 8, 
		RULE_bool = 9, RULE_point = 10, RULE_move = 11, RULE_line = 12, RULE_curve = 13, 
		RULE_toCommands = 14, RULE_repeat = 15, RULE_if = 16, RULE_ifElse = 17;
	public static readonly string[] ruleNames = {
		"program", "statement", "vardec", "assignment", "expr", "math", "term", 
		"factor", "atom", "bool", "point", "move", "line", "curve", "toCommands", 
		"repeat", "if", "ifElse"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'='", "'+'", "'-'", "'*'", "'/'", "'^'", "'('", "')'", "','", 
		"'line from'", "'curve from'", "'with angle'", "'to '", "'repeat'", "'until'", 
		"'loop'", "'iff'", "'if'", "'else'", null, null, null, "'begin'", "'end'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "BoolOperator", 
		"Typeword", "BooleanValue", "ScopeStart", "ScopeEnd", "Mul_Div", "Plus_Minus", 
		"WS", "Number", "ID", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RGCode.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static RGCodeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RGCodeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RGCodeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(RGCodeParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 36;
				statement();
				}
				}
				State = 39;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__14) | (1L << T__17) | (1L << Typeword) | (1L << ID))) != 0) );
			State = 41;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VardecContext vardec() {
			return GetRuleContext<VardecContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MoveContext move() {
			return GetRuleContext<MoveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RepeatContext repeat() {
			return GetRuleContext<RepeatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfContext @if() {
			return GetRuleContext<IfContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfElseContext ifElse() {
			return GetRuleContext<IfElseContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 43;
				assignment();
				}
				break;
			case 2:
				{
				State = 44;
				vardec();
				}
				break;
			case 3:
				{
				State = 45;
				move();
				}
				break;
			case 4:
				{
				State = 46;
				repeat();
				}
				break;
			case 5:
				{
				State = 47;
				@if();
				}
				break;
			case 6:
				{
				State = 48;
				ifElse();
				}
				break;
			}
			State = 51;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VardecContext : ParserRuleContext {
		public IToken typeWord;
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Typeword() { return GetToken(RGCodeParser.Typeword, 0); }
		public VardecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vardec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterVardec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitVardec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVardec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VardecContext vardec() {
		VardecContext _localctx = new VardecContext(Context, State);
		EnterRule(_localctx, 4, RULE_vardec);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			_localctx.typeWord = Match(Typeword);
			State = 54;
			assignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(RGCodeParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 6, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			Match(ID);
			State = 57;
			Match(T__1);
			State = 58;
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MathContext math() {
			return GetRuleContext<MathContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PointContext point() {
			return GetRuleContext<PointContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(RGCodeParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BoolContext @bool() {
			return GetRuleContext<BoolContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(Context, State);
		EnterRule(_localctx, 8, RULE_expr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 60;
				math();
				}
				break;
			case 2:
				{
				State = 61;
				point();
				}
				break;
			case 3:
				{
				State = 62;
				Match(ID);
				}
				break;
			case 4:
				{
				State = 63;
				@bool();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MathContext : ParserRuleContext {
		public MathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_math; } }
	 
		public MathContext() { }
		public virtual void CopyFrom(MathContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class SingleTermContext : MathContext {
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public SingleTermContext(MathContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterSingleTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitSingleTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingleTerm(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PlusminusContext : MathContext {
		public TermContext lhs;
		public IToken op;
		public MathContext rhs;
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MathContext math() {
			return GetRuleContext<MathContext>(0);
		}
		public PlusminusContext(MathContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterPlusminus(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitPlusminus(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlusminus(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MathContext math() {
		MathContext _localctx = new MathContext(Context, State);
		EnterRule(_localctx, 10, RULE_math);
		int _la;
		try {
			State = 71;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				_localctx = new PlusminusContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 66;
				((PlusminusContext)_localctx).lhs = term();
				State = 67;
				((PlusminusContext)_localctx).op = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==T__2 || _la==T__3) ) {
					((PlusminusContext)_localctx).op = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 68;
				((PlusminusContext)_localctx).rhs = math();
				}
				break;
			case 2:
				_localctx = new SingleTermContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 70;
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermContext : ParserRuleContext {
		public TermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term; } }
	 
		public TermContext() { }
		public virtual void CopyFrom(TermContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class SingleFactorContext : TermContext {
		public FactorContext child;
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext factor() {
			return GetRuleContext<FactorContext>(0);
		}
		public SingleFactorContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterSingleFactor(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitSingleFactor(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingleFactor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultiplicationContext : TermContext {
		public FactorContext lhs;
		public IToken op;
		public TermContext rhs;
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext factor() {
			return GetRuleContext<FactorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public MultiplicationContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterMultiplication(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitMultiplication(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiplication(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermContext term() {
		TermContext _localctx = new TermContext(Context, State);
		EnterRule(_localctx, 12, RULE_term);
		int _la;
		try {
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new MultiplicationContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 73;
				((MultiplicationContext)_localctx).lhs = factor();
				State = 74;
				((MultiplicationContext)_localctx).op = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==T__4 || _la==T__5) ) {
					((MultiplicationContext)_localctx).op = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 75;
				((MultiplicationContext)_localctx).rhs = term();
				}
				break;
			case 2:
				_localctx = new SingleFactorContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 77;
				((SingleFactorContext)_localctx).child = factor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FactorContext : ParserRuleContext {
		public FactorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_factor; } }
	 
		public FactorContext() { }
		public virtual void CopyFrom(FactorContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PowerContext : FactorContext {
		public IToken pow;
		[System.Diagnostics.DebuggerNonUserCode] public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext factor() {
			return GetRuleContext<FactorContext>(0);
		}
		public PowerContext(FactorContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterPower(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitPower(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPower(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SingeAtomContext : FactorContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		public SingeAtomContext(FactorContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterSingeAtom(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitSingeAtom(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingeAtom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FactorContext factor() {
		FactorContext _localctx = new FactorContext(Context, State);
		EnterRule(_localctx, 14, RULE_factor);
		try {
			State = 85;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				_localctx = new PowerContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 80;
				atom();
				State = 81;
				((PowerContext)_localctx).pow = Match(T__6);
				State = 82;
				factor();
				}
				break;
			case 2:
				_localctx = new SingeAtomContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 84;
				atom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtomContext : ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atom; } }
	 
		public AtomContext() { }
		public virtual void CopyFrom(AtomContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class IdMathContext : AtomContext {
		public IToken value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(RGCodeParser.ID, 0); }
		public IdMathContext(AtomContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterIdMath(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitIdMath(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdMath(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CompundContext : AtomContext {
		[System.Diagnostics.DebuggerNonUserCode] public MathContext math() {
			return GetRuleContext<MathContext>(0);
		}
		public CompundContext(AtomContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterCompund(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitCompund(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompund(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ValueContext : AtomContext {
		public IToken value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Number() { return GetToken(RGCodeParser.Number, 0); }
		public ValueContext(AtomContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.EnterValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRGCodeListener typedListener = listener as IRGCodeListener;
			if (typedListener != null) typedListener.ExitValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRGCodeVisitor<TResult> typedVisitor = visitor as IRGCodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtomContext atom() {
		AtomContext _localctx = new AtomContext(Context, State);
		EnterRule(_localctx, 16, RULE_atom);
		try {
			State = 93;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Number:
				_localctx = new ValueContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 87;
				((ValueContext)_localctx).value = Match(Number);
				}
				break;
			case ID:
				_localctx = new IdMathContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 88;
				((IdMathContext)_localctx).value = Match(ID);
				}
				break;
			case T__7:
				_localctx = new CompundContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 89;
				Match(T__7);
				State = 90;
				math();
				State = 91;
				Match(T__8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
